--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "uni-time-table-bot"
-version = "0.1.1"
+name = "uni-bot"
+version = "0.1.2"
 publish = false
 edition = "2021"
 rust-version = "1.68"
